# aggregate

./: .gitignore  .readthedocs.yaml  .readthedocs.yml  CLAUDE.md  LICENSE  Language_Specification.md  Long_description.rst  MANIFEST.in  README.md  README.rst  __init__.py  build-docs.bat  build_notes.md  debug.py  distr.py  dm.py  doc-test-uv.ps1  doc-test.bat  doc-test.ps1  documentation.html  helpers.py  lines.yaml  objects.inv  package-lock.json  package.json  param.py  pipreq_requirements.txt  port.py  portfolio-refactor-0-baseline.md  portfolio-refactor-A-prune-and-move.md  portfolio-refactor-B-approx-tilt.md  portfolio-refactor-C-distortion-calibration.md  portfolio-refactor-D-pricing-redesign.md  portfolio-refactor-E-stats-consolidation.md  portfolio-refactor-planning.md  portfolio.yaml  portfolios.yaml  pyproject.toml  refactor-plan.md  release_notes.md  (+19 more)
.claude/: settings.local.json
aggregate/: __init__.py  agg_magics.py  bounds.py  constants.py  decl_pygments.py  distr.py  distributions.py  iman_conover.py  moments.py  param.py  parser.py  port.py  portfolio.py  random.py  random_agg.py  results.py  scripts.py  spectral.py  underwriter.py  utilities.py  utils.py
aggregate/agg/: examples.agg  site.agg  test_suite.agg  user.agg
aggregate/extensions/: __init__.py  basic.py  bodoff.py  case_studies.py  cnc.py  figures.py  ft.py  pentagon.py  pir_figures.py  portfolio_pir.py  risk_progression.py  samples.py  tame.py  test_suite.py  tweedie.py
aggregate/templates/: Reserve_specification.html  Reserve_story.html  Reserve_story.md  base.html  results_base.html  test_suite_template.html
aggregate/yaml/: aggregates.yaml  books.yaml  curves.yaml  user_aggregates.yaml  user_portfolios.yaml
cheat-sheets/: Aggregate_Cheat_Sheet.tex  DecL_Cheat_Sheet.tex  Distortion_Cheat_Sheet.tex  Portfolio_Cheat_Sheet.tex  README.rst  Severity_Cheat_Sheet.tex  Underwriter_Cheat_Sheet.tex  agg_cheats.xlsx  cheat_sheet_macros.tex  combine.bat  make.bat
dev/: PROGRESS.md  TODO-Remember.md  pipeline-aggregate.rst  pipeline-portfolio.rst  plan-A-aggregate-style.md  plan-B-decl-errors.md  plan-C-apiweb-backend.md  plan-D-apiweb-frontend.md  plan-E-apiweb-polish.md  plan-aggregate-refactor.md  plan-baseline-harness.md  plan-decl-colorization.md  plan-meta.md  plan-parser-errors-promotion.md  plan-portfolio-refactor.md  spectral-quartet.md  tentative-plan-decl-colorization.md
dev/done/: plan-portfolio-refactor.md  plan-validation-stats-noise.md
doc/: .readthedocs.yaml  04_Prob_Risk_Thy.rst  05_Freq_Dist.md  1_Getting_Started.rst  2_User_Guide.rst  2_User_Guides.rst  2_x_10mins.rst  2_x_actuary_student.rst  2_x_agg_language.rst  2_x_aggregate.rst  2_x_all_the_rest.rst  2_x_basics.rst  2_x_capital.rst  2_x_case_studies.rst  2_x_cat.rst  2_x_distortion.rst  2_x_exposure.rst  2_x_ir_pricing.rst  2_x_limits_and_mixtures.rst  2_x_mixtures.rst  2_x_objintro.rst  2_x_portfolio.rst  2_x_re_pricing.rst  2_x_reserving.rst  2_x_samples_rearrangement.rst  2_x_strategy.rst  2_x_student.rst  2_x_tweedie.rst  2_x_underwriter.rst  2_x_unused.rst  3_Reference.rst  3_x_Bounds.rst  3_x_Distortion.rst  3_x_Distribution.rst  3_x_Extensions.rst  3_x_Parser.rst  3_x_Portfolio.rst  3_x_Underwriter.rst  41_underwriter.rst  46_utils.rst  (+38 more)
doc/2_user_guides/: 2_x_10mins.rst  2_x_actuary_student.rst  2_x_agg_language.rst  2_x_aggregate.rst  2_x_approximation_error.rst  2_x_capital.rst  2_x_case_studies.rst  2_x_cat.rst  2_x_dec_language.rst  2_x_distortion.rst  2_x_exposure.rst  2_x_frequency.rst  2_x_ir_pricing.rst  2_x_limits.rst  2_x_limits_and_mixtures.rst  2_x_mixtures.rst  2_x_numerical_methods.rst  2_x_portfolio.rst  2_x_problems.rst  2_x_re_pricing.rst  2_x_reinsurance.rst  2_x_reserving.rst  2_x_samples.rst  2_x_samples_rearrangement.rst  2_x_severity.rst  2_x_strategy.rst  2_x_student.rst  2_x_tweedie.rst  2_x_underwriter.rst  2_x_unused.rst  2_x_vectorization.rst
doc/3_reference/: 3_x_Bounds.rst  3_x_Distortion.rst  3_x_Distribution.rst  3_x_Extensions.rst  3_x_Parser.rst  3_x_Portfolio.rst  3_x_Underwriter.rst  3_x_Utilities.rst
doc/4_agg_language_reference/: ref_include.rst
doc/5_technical_guides/: ra.csv  (+27 more)
docs/: 1_Getting_Started.rst  3_Reference.rst  4_dec_Language_Reference.rst  5_Technical_Guides.rst  7_bibliography.rst  bib.bat  books.bib  conf.py  extract.bib  index.rst  make.bat  start-server.bat
examples/: 2RM_MethodA_B_Example  Derivatives.ipynb  Examples_and_Solutions.ipynb  Hack.ipynb  MM_2RMs.ipynb  Problems_and_Solutions.ipynb  Problems_and_Solutions.md  Reins_Credit_Risk.ipynb  ScriptExamples.ipynb  Untitled.ipynb  Untitled2.ipynb  UsingSamples.ipynb  basic_examples.ipynb  basic_examples_DiskStation_Sep-16-1542-2018_Conflict.ipynb  case_specs.csv  case_studies.py  deleted_content.py  dist_and_pricing.ipynb  dm.tex  frequency_distributions.ipynb  limit_profiles_mixed_severity_mixing.html  limit_profiles_mixed_severity_mixing.ipynb  parser.out  samples.py
issue_raised/: agg MBBEFD using CDF.html  agg using G (which does not seem correct as used).html
old_setup/: requirements.txt  setup.py  twine_update.bat  update.bat
parameters/: us_naic_parameters.ipynb
scripts/: build-web.ps1  build-web.sh
test/: Examples.xlsx  freq_and_broadcasting.ipynb  parser.out  script_tests.py  test_cases.py
tests/: capture_distortion_snapshot.py  capture_peg_baseline.py  capture_severity_golden.py  capture_sly_snapshot.py  conftest.py  peg.py  test_baseline.py  test_bounds.py  test_decl_parser.py  test_distortion_calibrate.py  test_distortion_construction.py  test_distortion_quartet.py  test_distortion_snapshot.py  test_ft.py  test_moments.py  test_parser_errors.py  test_parser_errors_integration.py  test_portfolio_peg_regression.py  test_severity_layer_golden.py  test_splice_suite.py  test_style.py  test_tweedie.py  test_underwriter.py  test_validation.py
web/: index.html  package-lock.json  package.json  vite.config.js
yaml/: accounts.yaml  blocks.yaml  books.yaml  catlines.yaml  curves.yaml  lines.yaml  portfolio.yaml  severity.yaml  user_accounts.yaml  user_books.yaml  user_portfolios.yaml
(+393 files in other folders)
